--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -112,4 +112,4 @@ extra:
     - icon: fontawesome/brands/python
       link: https://pypi.org/project/pyger/
     - icon: fontawesome/brands/telegram
-      link: https://t.me/NNGerBots
+      link: https://t.me/NiGGeR_Bots
